phase-4-k8s-infra/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n

  template:
    metadata:
      labels:
        app: n8n

    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000

      containers:
        - name: n8n
          image: docker.io/n8nio/n8n:2.39.6

          ports:
            - containerPort: 3008
              protocal: TCP

          fromEnv:
            - configMapRef:
              name: n8n-configmap
            - secretRef:
              name: n8n-container-env

          securityContext:
            allowPrivilegeEscalation: false

          volumeMounts:
            - name: n8n-data
              mountPath: /home/node/.n8n
            - name: secrets-store
              mountPath: /mnt/secrets-store
              readOnly: true

      restartPolicy: Always

      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-data
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: n8n-secrets
