phase-4-k8s-infra/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
spec:
  ports:
    - port: 3008
  selector:
    app: n8n
  type: LoadBalancer
